--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1158,10 +1158,10 @@ ol {
   }
 
   .triplelargef {
-    font-size: 20px !important;
+    font-size: 24px !important;
     letter-spacing: 1px !important;
     font-weight: 600 !important;
-    line-height: 25px !important;
+    line-height: 30px !important;
 
   }
 
@@ -1230,7 +1230,7 @@ ol {
   .triplelargef {
     font-size: 24px !important;
     letter-spacing: 1px !important;
-    font-weight: 400 !important;
+    font-weight: 500 !important;
     line-height: 18px !important;
 
   }
@@ -1303,7 +1303,8 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 16px !important;
+    font-size: 20px !important;
+    line-height: 30px !important;
   }
 
   .triplelargef {
@@ -2972,7 +2973,8 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 24px;
+    font-size: 30px;
+    line-height: 40px;
   }
 
   .triplelargef {
@@ -3061,7 +3063,8 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 24px;
+    font-size: 35px;
+    line-height: 45px;
   }
 
   .dubblelargefXL {
@@ -3141,8 +3144,6 @@ ol {
 /* cutom font size for max screen size 1920 or default size of all types fonts */
 @media only screen and (min-width:1850px) {
 
-
-
   .extsmallf {
     font-size: 13px;
   }
@@ -3183,7 +3184,8 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 24px;
+    font-size: 36px;
+    line-height: 46px;
   }
 
   .dubblelargefXL {
@@ -3253,6 +3255,7 @@ ol {
     font-size: 50px;
     font-weight: 500;
     line-height: 44px;
+    margin-top: 15px;
 
   }
 
