--- a/components/Start/Start.module.css
+++ b/components/Start/Start.module.css
@@ -227,10 +227,10 @@
 
     /* form input field padding */
 
-    .formbg input {
+    /* .formbg input {
         padding-top: 3px !important;
         padding-bottom: 3px !important;
-    }
+    } */
 
 
     .selectedCoursepriceBg {
@@ -326,11 +326,11 @@
         padding: 6px !important;
     }
 
-    .passwordInput input {
+    /* .passwordInput input {
 
         padding-top: 2px !important;
         padding-bottom: 2px !important;
-    }
+    } */
 
     /* submitbtn */
 
@@ -432,13 +432,13 @@
 
     .passwordInput input {
 
-        padding-top: 1px !important;
-        padding-bottom: 1px !important;
+        padding-top: 3px !important;
+        padding-bottom: 3px !important;
     }
 
     .formbg input {
-        padding-top: 1px !important;
-        padding-bottom: 1px !important;
+        padding-top: 3px !important;
+        padding-bottom: 3px !important;
     }
 
     .cardDetailForm {
@@ -467,13 +467,14 @@
         padding-bottom: 0px !important;
     }
 
+    /* 
     .submitbtnbg {
 
         margin-top: 20px !important;
         margin-bottom: 8px !important;
         padding-bottom: 2px !important;
         padding-top: 2px !important;
-    }
+    } */
 
 
 }
@@ -631,11 +632,11 @@
         padding: 3px !important;
     }
 
-    .passwordInput input {
+    /* .passwordInput input {
 
         padding-top: 0px !important;
         padding-bottom: 0px !important;
-    }
+    } */
 
     /* submitbtn */
 
